<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <!--Para listar las ofertas para companies-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/textViewOfferTitleManagement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchOfferActive"
            android:layout_marginEnd="8dp"
            tools:text="Título de la Oferta de Trabajo" />

        <TextView
            android:id="@+id/textViewOfferDateManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewOfferTitleManagement"
            android:layout_marginTop="4dp"
            tools:text="Publicado: Hace 2 días" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchOfferActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textViewOfferDateManagement" />

        <LinearLayout
            android:id="@+id/layoutOfferActionsManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/switchOfferActive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/buttonEditOffer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_marginEnd="4dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonDeleteOffer"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="?attr/colorError"
                app:strokeColor="?attr/colorError"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>